--- a/style/css.css
+++ b/style/css.css
@@ -1,7 +1,8 @@
 *{
     background-color:#313E4E;
-    font-family: "Amatic SC" ;
-}
+    font-family: "Amatic SC"     
+        
+    }
 .header {
     background: none;
     overflow: hidden;
@@ -24,16 +25,20 @@
     margin-right: 30px;
     line-height: 80px;
     color:bisque;
-    font-size: 20px;
+    font-size: 20px, [if IE] 14px [endif];
     padding-left: 30px;
+   
 }
 .main-nav a:hover{
     color: rgb(34, 232, 247);
-    text-decoration: underline;
-    
-   
+    text-decoration: underline;  
+ 
 }
 
+.seperate-text a:hover{
+    color: rgb(34, 232, 247);
+    text-decoration: underline; 
+}
 
 .content{
     color: bisque;
@@ -71,3 +76,31 @@
     color: whitesmoke;
 }
 
+.footer{
+    color: bisque;
+    text-align: center;
+    font-size: 15px;
+    width:100%;
+    padding-top: 20px;
+}
+.mySlides{
+    max-width: 150px;
+}
+
+.text-coach{
+    color: whitesmoke;
+    font-family: Overlock;
+    font-size: 16px;
+    text-align: justify;
+}
+
+.seperate-text{
+    color: bisque;
+    font-size: 18px;
+    font-style: strong;
+}
+.bottom-image{
+    float:center;
+    padding-left: 10%;
+    max-width: auto;
+}
